--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="headercontent">
 			<div class="header-top">
 				<a href="" class="header-top_item1">Главная</a>
-				<a href="#Обо мне" class="header-top_item2">Обо мне</a>
+				<a href="#дизайнер" class="header-top_item2">Обо мне</a>
 				<a href="#Навыки" class="header-top_item3">Навыки</a>
 				<a href="#Портфолио" class="header-top_item4">Портфолио</a>
 				<a href="#Контакты" class="header-top_item5">Контакты</a>
@@ -52,9 +52,9 @@
    <div class="content">
 		<div class="about">
 			<div class="aboutme">
-				<div class="aboutme__title"><a name="Обо мне"></a>Обо мне</div>
+				<div class="aboutme__title">Обо мне</div>
 				<div class="aboutme__text">
-					Привет, я Настя - графический дизайнер/диджитал художник из Москвы.
+					Привет, я Настя - графический <a name="дизайнер"></a>дизайнер/диджитал художник из Москвы.
 					<br>
 					Я выражаю себя в творчестве и учусь делать это профессионально.
 					<br>
