--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Заголовок страницы, контейнер для других важных данных (не отображается) -->
 <head>
 	<!-- Заголовок страницы в браузере -->
-	<title>Sweet Jam Графический дизайнер Диджиталхудожник 15 лет, Москва</title>
+	<title>Sweet Jam Графический дизайнер Диджитал художник 15 лет, Москва</title>
 	<!-- Подключаем CSS -->
 	<link rel="stylesheet" href="css/style.css" />
 	<!-- Кодировка страницы -->
@@ -118,8 +118,8 @@
 					<div class="programs__item_img">
 						<img src="img/icons/medibang.png" alt=""></div>
 					<div class="programs__item_title">
-						MediBang
-						<br>Paint Pro</div>
+					<span class="span">MediBang
+						<br>Paint Pro</span></div>
 				</div>
 			</div>
 		</div>
