--- a/index.html
+++ b/index.html
@@ -17,23 +17,37 @@
 <div class="wrapper">
 	<header class="header">
 		<div class="headercontent">
+		<!-- 	<div class="header_burger">
+				<span></span>
+			   </div> -->
 			<div class="header-top">
+					<div class="header_burger">
+				<span></span>
+			   </div>
+				<div class="father_burger">
+         <!-- 	<div class="header_burger">
+				<span></span>
+			   </div> -->
 				<a href="" class="header-top_item1">Главная</a>
 				<a href="#Обо мне" class="header-top_item2">Обо мне</a>
 				<a href="#Навыки" class="header-top_item3">Навыки</a>
 				<a href="#Портфолио" class="header-top_item4">Портфолио</a>
 				<a href="#Контакты" class="header-top_item5">Контакты</a>
+            </div>
 			</div>
          <div class="line">
-				<hr class="line_hr"></div>
+				<hr class="line_hr">
+			</div>
+		
 			<div class="headerbottom">
 				<div class="headerbottom__content">
 					<div class="leftlogo">
 
 						<div class="Sweet">
-							Sweet
-							<br>Jam</div>
-                </div>
+							Sweet<br>
+						   Jam
+						</div>
+                  </div>
 					<div class="titlecenter">
 						<br>
 						<br>
@@ -160,6 +174,7 @@
 
  </div>
  </div>
- 
+ <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+ <script src="js/script.js"></script>
 </body>
 	</html>
