--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css" />
 	<!-- Кодировка страницы -->
 	<meta charset="UTF-8">
-	<meta name="viewport" content="widht=device-widht"></head>
+	<meta name="viewport" content="width=device-width"></head>
 	<!-- Отображаемое тело страницы -->
 
 <body>
