--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<div class="leftlogo">
 
 						<div class="Sweet">
-							Sweet<br>
-						   Jam
+							<h1>Sweet<br>
+						   Jam</h1>
 						</div>
                   </div>
 					<div class="titlecenter">
@@ -66,11 +66,12 @@
    <div class="content">
 		<div class="about">
 			<div class="aboutme">
-				<div class="aboutme__title"><a name="Обо мне"></a>Обо мне</div>
+				<div class="aboutme__title"><h1><a name="Обо мне"></a>Обо мне</h1></div>
 				<div class="aboutme__text">
-					Привет, я Настя - графический дизайнер/диджитал художник из Москвы.
+					<h2>Привет, я Настя - графический дизайнер/диджитал художник из Москвы.
 					<br>
-					Я выражаю себя в творчестве и учусь делать это профессионально.
+					Я выражаю себя в творчестве и учусь<span> делать это  
+					профессионально.</span>
 					<br>
 					<br>
 					Я собираюсь поступать в колледж
@@ -81,13 +82,13 @@
 					Буду рада помочь вам с визуализацией
 					<br>
 					ваших идей и проектов.
-					<br></div>
+					<br></h2></div>
 			</div>
 			<div class="aboutservice">
 				<div class="aboutservice__title">
-					Примеры выполняемых работ
-					<br>и услуг</div>
-				<div class="aboutservice__text">
+					<h1>Примеры выполняемых работ
+					<br>и услуг</h1></div>
+				<div class="aboutservice__text"><h2>
 					1) Рисунок на заказ: оригинальный персонаж, аватарки, портреты в разных стилях, фанарты,
 					<br>
 					комиксы, анимации и другое...
@@ -100,12 +101,12 @@
 					<br>
 					открыток и прочее...
 					<br>
-					<br>4) Работа с фотографией: ретуширование, фотошоп и другое...</div>
+					<br>4) Работа с фотографией: ретуширование, фотошоп и другое...</h2></div>
 			</div>
 		</div>
 		<div class="skills">
-			<div class="skills__title"><a name="Навыки"></a>Навыки</div>
-			<div class="skills__subtitle">Я работаю в таких программах как:</div>
+			<div class="skills__title"><h1><a name="Навыки"></a>Навыки</h1></div>
+			<div class="skills__subtitle"><h1>Я работаю в таких программах как:</h1></div>
 			<div class="programs">
 				<div class="programs__item">
 					<div class="programs__item_img">
@@ -138,7 +139,7 @@
 			</div>
 		</div>
 		<div class="Portfolio">
-			<div class="Portfolio__title"><a name="Портфолио"></a>Портфолио</div>
+			<div class="Portfolio__title"><h1><a name="Портфолио"></a>Портфолио</h1></div>
 			<div class="picture">
 				<div class="picture__item">
 					<img src="img/Portfolio/ganster.png" alt=""></div>
@@ -153,8 +154,8 @@
  	<div class="footer__content">
  		<div class="uppart">
  			<div class="uppart__content">
- 				<div class="uppart__content_title"><a name="Контакты"></a>Контакты</div>
- 				<div class="uppart__content_invite">Хочешь узнать больше или просто пообщаться? <br> Буду всем рада!</div>
+ 				<div class="uppart__content_title"><h1><a name="Контакты"></a>Контакты</h1></div>
+ 				<div class="uppart__content_invite"><h2>Хочешь узнать больше или просто пообщаться? <br> Буду всем рада!</h2></div>
  			</div>
  		</div>
  		<div class="socnetworks">
@@ -172,8 +173,18 @@
  		</div>
  	</div>
 
- </div>
- </div>
+   </div>
+</div>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
  <script src="js/script.js"></script>
 </body>
